--- a/Home.resx
+++ b/Home.resx
@@ -138,7 +138,7 @@
         hheU9SFyHl5R1ofIeeijrA+R8zBAWR85PDdyHs5Q9i8TRR/6dj+hwzvYLwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="Btn_Timkiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="Btn_ThongTin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAAmdJREFUSEut
         lk1rU0EYhS9+oIgKgl8ruxDx23VxFZBSs1SM+Q4hiwiKmkprt/GndNNisfYPuKmKFERE2yD4I0StXaTU
